<resources>
    <string name="app_name">SaharaMusic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="house_menu">House</string>

    <!-- Notificaiton Channel -->
    <string name="notification_channel">Now Playing</string>
    <string name="notification_channel_description">Shows what music is currently playing in our App</string>

    <!-- Notification actions -->
    <string name="notification_skip_to_previous">Skip to previous track</string>
    <string name="notification_skip_to_next">Skip to next track</string>
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>

    <!-- Error messages -->
    <string name="error_media_not_found">Could not locate requested media.</string>
    <string name="generic_error">The application has encountered an unexpected error.</string>
    <string name="reggaeton_menu">Reggaeton</string>
    <string name="rock_menu">Rock</string>
    <string name="pop_menu">Pop</string>
    <string name="classic_menu">Classic</string>
    =
</resources>